<resources>
    <string name="app_name">Mr.MEMORIZER</string>
    <string name="title_dashboard">开始</string>
    <string name="title_note_list">笔记一览</string>
    <string name="title_statistics">数据统计</string>
    <string name="title_new_text_note">新建文本笔记</string>
    <string name="title_new_map_note">新建思维导图</string>
    <string name="title_edit_text_note">编辑文本笔记</string>
    <string name="title_edit_map_note">编辑思维导图</string>
    <string name="title_preview_map_note">预览思维导图</string>
    <string name="title_save">保存</string>
    <string name="title_abort">放弃</string>
    <string name="text_no_title_error">请输入标题！</string>
    <string name="title_view_note">查看笔记</string>
    <string name="title_edit">编辑</string>
    <string name="title_remove">删除</string>
    <string name="text_title">标题</string>
    <string name="text_content">内容</string>
    <string name="text_next_review_time">下一次复习：</string>
    <string name="text_next_review_time_value_at_day">%d天后</string>
    <string name="text_next_review_time_value_ready">待复习</string>
    <string name="text_readyToReview">待复习</string>
    <string name="text_item_count">%d项</string>
    <string name="text_nextReview">下一次复习</string>
    <string name="text_no_note_ready_to_review">今天已经没有待复习的笔记了</string>
    <string name="text_do_review">完成复习</string>
    <string name="text_category">分类</string>
    <string name="text_uncategorized">未分类</string>
    <string name="text_all_category">所有分类</string>
    <string name="title_search">搜索</string>
    <string name="text_all">全部</string>
    <string name="text_text_note">文本笔记</string>
    <string name="text_mind_note">思维导图</string>
    <string name="review_notification_channel_name">笔记复习提醒</string>
    <string name="review_notification_title">笔记复习提醒</string>
    <string name="review_notification_content">今天还有%d篇笔记需要复习</string>
    <string name="text_preview">预览</string>
    <string name="title_settings">设置</string>
    <string name="settings_category_review_interval">复习间隔</string>
    <string name="settings_key_review_interval">review_interval</string>
    <string name="settings_title_edit_review_interval">手动修改</string>
    <string name="settings_key_edit_review_interval">edit_review_interval</string>
    <string name="settings_title_auto_adjust_review_interval">自动调节</string>
    <string name="settings_key_auto_adjust_review_interval">auto_adjust_review_interval</string>
    <string name="title_add">添加</string>
    <string name="text_show">显示</string>
    <string name="text_hide">隐藏</string>
    <string name="text_note_hide_hint">笔记已隐藏\n请先尝试回想笔记的内容\n然后点击按钮显示笔记</string>
    <string name="text_review_grade_0">0：完全记不起来</string>
    <string name="text_review_grade_1">1：看过笔记之后稍微有点印象</string>
    <string name="text_review_grade_2">2：看过笔记之后才能记起来</string>
    <string name="text_review_grade_3">3：努力思考了一会儿才能记起来</string>
    <string name="text_review_grade_4">4：稍微思考了一会儿就能记起来</string>
    <string name="text_review_grade_5">5：完全可以记起来</string>
    <string name="text_review_note_hint">请选择你在回忆这篇笔记时最符合的选项：</string>
    <string name="text_today_review_counts">今日复习次数</string>
    <string name="text_total_review_counts">累计复习次数</string>
    <string name="text_today_note_counts">今日记忆条数</string>
    <string name="text_total_note_counts">累计记忆条数</string>
    <string name="text_today_punctually_reviewTimes">今日复习实时完成率</string>
    <string name="text_total_punctually_reviewTimes">总复习实时完成率</string>
    <string name="text_category_counts">类别个数</string>
    <string name="settings_category_daily_notice">每日复习提醒</string>
    <string name="settings_title_daily_notice_enabled">开启每日复习提醒</string>
    <string name="settings_title_daily_notice_time">提醒时间</string>
</resources>