<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="me.ssttkkl.mrmemorizer.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_view_note"
            app:destination="@id/navigation_view_note" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_view_map_note"
            app:destination="@id/navigation_view_map_note" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_edit_note"
            app:destination="@id/navigation_edit_note" />
        <action
            android:id="@+id/action_navigation_dashboard_to_settingsActivity"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_note_list"
        android:name="me.ssttkkl.mrmemorizer.ui.notelist.NoteListFragment"
        android:label="@string/title_note_list"
        tools:layout="@layout/fragment_note_list">
        <action
            android:id="@+id/action_navigation_note_list_to_navigation_view_note"
            app:destination="@id/navigation_view_note" />
        <action
            android:id="@+id/action_navigation_note_list_to_navigation_view_map_note"
            app:destination="@id/navigation_view_map_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="me.ssttkkl.mrmemorizer.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_view_note"
        android:name="me.ssttkkl.mrmemorizer.ui.viewnote.ViewNoteFragment"
        android:label="@string/title_view_note"
        tools:layout="@layout/fragment_view_note">
        <argument
            android:name="noteId"
            app:argType="java.lang.Integer" />
        <action
            android:id="@+id/action_navigation_view_note_to_navigation_edit_note"
            app:destination="@id/navigation_edit_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view_map_note"
        android:name="me.ssttkkl.mrmemorizer.ui.viewnote.ViewMapNoteFragment"
        android:label="@string/title_view_note"
        tools:layout="@layout/fragment_view_map_note">
        <argument
            android:name="noteId"
            app:argType="java.lang.Integer" />
        <action
            android:id="@+id/action_navigation_view_map_note_to_navigation_edit_note"
            app:destination="@id/navigation_edit_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_note"
        android:name="me.ssttkkl.mrmemorizer.ui.editnote.EditNoteFragment"
        tools:layout="@layout/fragment_edit_note">
        <argument
            android:name="mode"
            app:argType="java.lang.String" />
        <argument
            android:name="noteType"
            app:argType="me.ssttkkl.mrmemorizer.data.entity.NoteType" />
        <argument
            android:name="noteId"
            app:argType="java.lang.Long" />
        <action
            android:id="@+id/action_navigation_edit_note_to_navigation_preview_note"
            app:destination="@id/navigation_preview_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preview_note"
        android:name="me.ssttkkl.mrmemorizer.ui.editnote.PreviewNoteFragment"
        tools:layout="@layout/fragment_preview_map_note">
        <argument
            android:name="noteContent"
            app:argType="java.lang.String" />
    </fragment>
    <activity
        android:id="@+id/navigation_settings"
        android:name="me.ssttkkl.mrmemorizer.ui.settings.SettingsActivity"
        android:label="@string/title_settings" />
</navigation>