<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_review_interval">

        <Preference
            app:key="@string/settings_key_edit_review_interval"
            app:title="@string/settings_title_edit_review_interval" />

        <!--        <ListPreference-->
        <!--            app:defaultValue="reply"-->
        <!--            app:entries="@array/reply_entries"-->
        <!--            app:entryValues="@array/reply_values"-->
        <!--            app:key="reply"-->
        <!--            app:title="@string/reply_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/sync_header">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/sync_title" />-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:title="@string/attachment_title" />-->

    <!--    </PreferenceCategory>-->
    <!--    <PreferenceCategory app:title="@string/messages_header">-->

    <!--        <EditTextPreference-->
    <!--            app:key="signature"-->
    <!--            app:title="@string/signature_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--        <ListPreference-->
    <!--            app:defaultValue="reply"-->
    <!--            app:entries="@array/reply_entries"-->
    <!--            app:entryValues="@array/reply_values"-->
    <!--            app:key="reply"-->
    <!--            app:title="@string/reply_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--    </PreferenceCategory>-->
    <!--    <PreferenceCategory app:title="@string/sync_header">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/sync_title" />-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:title="@string/attachment_title" />-->

    <!--    </PreferenceCategory>-->

</PreferenceScreen>