<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="me.ssttkkl.mrmemorizer.ui.statistics.StatisticsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/title_statistics" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_review_number_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_today_review_counts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.todayReviewTimes}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_review_number_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_total_review_counts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.totalReviewTimes}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_today_note_counts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.todayNoteCounts}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_total_note_counts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.totalNoteCounts}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_today_punctually_reviewTimes" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.todayPunctuallyReviewTimes}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/statistics_title_text_size"
                    android:text="@string/text_total_punctually_reviewTimes" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/statistics_data_text_size"
                    android:text="@{viewModel.totalPunctuallyReviewTimes}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="5"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/statistics_title_text_size"
                android:text="@string/text_category_counts" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/statistics_data_text_size"
                android:text="@{viewModel.categoryCounts}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="5"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>